tdf#165266 Force NSColor and native controls to use effective appearance

+[NSAppearance setCurrentAppearance:] is deprecated and calling that
appears to do less and less with each new version of macos and/or Xcode
so run all system +[NSColor ...] calls and drawing of native controls
in a block passed to -[NSAppearance performAsCurrentDrawingAppearance:].

Change-Id: I857bfb2504ad2896579c7b2da4fdd2d591fab3b8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182074
Reviewed-by: Sahil Gautam <sahil.gautam.extern@allotropia.de>
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>